# retro-level-editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  project.json
cmake/: FindSDL2.cmake
demo-proj/: project.json
doc/: map-editor.md  platform-games.md  todo.md
include/: ProjectManager.h
include/model/: Map.h  MapNode.h  Palette.h  Project.h  Texture.h
include/widgets/: MapWindow.h
src/: ProjectManager.cpp  main.cpp
src/model/: Map.cpp  MapNode.cpp  Palette.cpp  Project.cpp  Texture.cpp
src/widgets/: MapWindow.cpp
